--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/meta/W.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="/meta/meta.png" />
-    <title>wojteko.dev</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta property="og:title" content="wojteko.dev | strony internetowe" />
+	<meta property="og:url" content="wojteko.dev" />
+	<meta property="og:description" content="Projektowanie i wykonywanie stron internetowych.">
+	<meta property="og:image" content="/meta/meta.png" />
+	<link rel="icon" type="image/svg+xml" href="/meta/W.svg" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>wojteko.dev</title>
+</head>
+
+<body>
+	<div id="root"></div>
+	<script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
