--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta property="og:title" content="wojteko.dev | strony internetowe" />
 	<meta property="og:url" content="wojteko.dev" />
 	<meta property="og:description" content="Projektowanie i wykonywanie stron internetowych.">
-	<meta property="og:image" content="/meta/meta.png" />
+	<meta property="og:image" content="https://wojteko.dev/meta/meta.png" />
 	<link rel="icon" type="image/svg+xml" href="/meta/W.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>wojteko.dev</title>
