--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta property="og:url" content="wojteko.dev" />
 	<meta property="og:description" content="Projektowanie i wykonywanie stron internetowych.">
 	<meta property="og:image" content="https://wojteko.dev/meta/meta.png" />
+	<meta property="og:type" content="website">
 	<link rel="icon" type="image/svg+xml" href="/meta/W.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>wojteko.dev</title>
